# XsensClient

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindXsensSDK.cmake  XsensClient-config.cmake.in
example/: CMakeLists.txt  mainXsens.cpp
include/XsensClient/: XsensClient.h  datagrams.h
include/XsensClient/streaming_protocol/: JointAnglesDatagram.h  ParserManager.h  QuaternionDatagram.h
src/: CMakeLists.txt  XsensClient.cpp
src/streaming_protocol/: JointAnglesDatagram.cpp  ParserManager.cpp  QuaternionDatagram.cpp  README.md  angularsegmentkinematicsdatagram.cpp  centerofmassdatagram.cpp  datagram.cpp  eulerdatagram.cpp  linearsegmentkinematicsdatagram.cpp  metadatagram.cpp  positiondatagram.cpp  scaledatagram.cpp  streamer.cpp  timecodedatagram.cpp  trackerkinematicsdatagram.cpp
